# obs-novby-protector

./: .gitattributes  buildspec.json  nudenet-best.onnx  temp-build-arch.sh
demo/: CMakeLists.txt  README.md  build-windows.sh  run.sh
demo/include/: constants.h  nn_utils.h  utils.h
demo/include/nn/: autobackend.h  onnx_model_base.h
demo/include/utils/: augment.h  common.h  ops.h
demo/src/: main.cpp  nn_utils.cpp  utils.cpp
demo/src/nn/: autobackend.cpp  onnx_model_base.cpp
demo/src/utils/: augment.cpp  common.cpp  ops.cpp
obs-plugin/: .clang-format  .gitignore  CMakeLists.txt  README.md  temp-build-arch.sh
obs-plugin/cmake/common/: compiler_common.cmake
obs-plugin/cmake/linux/: compilerconfig.cmake
obs-plugin/src/: SettingsWidget.cpp  SettingsWidget.hpp  nsfw-filter-info.c  nsfw-filter.cpp  nsfw-filter.h  plugin-main.cpp  plugin-support.c.in  plugin-support.h
qt-demo/: CMakeLists.txt  README.md
qt-demo/src/: main.cpp  qt_demo.cpp  qt_demo.h  qt_demo.ui
src/: plugin-main.c
